<resources>
    <string name="app_name">Go KWH</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="nav_header_title">Go KWH</string>
    <string name="nav_header_subtitle">Mari Berwirausaha</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_1_id">Memajukan Perekonomian</string>
    <string name="menu_2_id">Dengan Berwirausaha</string>
    <string name="menu_3_id">Go KWH</string>
    <string name="menu_logo_id">Go KWH Logo</string>
    <string name="menu_logo2_id">Kuliner Logo</string>
    <string name="menu_logo3_id">Elektronik Logo</string>
    <string name="menu_logo4_id">Fashion Logo</string>
    <string name="menu_4_id">Selamat Datang Di Menu Pengisian Formulir Usaha Kuliner</string>
    <string name="menu_5_id">Selamat Datang Di Menu Pengisian Formulir Usaha Elektronik</string>
    <string name="menu_6_id">Selamat Datang Di Menu Pengisian Formulir Usaha Fashion</string>
    <string name="menu_form_1_id">Form Pengajuan Proposal Kuliner</string>
    <string name="menu_form_2_id">Form Pengajuan Proposal Elektronik</string>
    <string name="menu_form_3_id">Form Pengajuan Proposal Fashion</string>
    <string name="menu_form_nama_id">Nama:</string>
    <string name="menu_form_nama_hint_id">Masukkan Nama Anda</string>
    <string name="menu_form_alamat_id">Alamat:</string>
    <string name="menu_form_alamat_hint_id">Masukkan Alamat Usaha</string>
    <string name="menu_form_email_id">E-Mail:</string>
    <string name="menu_form_email_hint_id">Masukkan Alamat E-Mail Anda</string>
    <string name="menu_form_telp_id">No. HP / Telepon:</string>
    <string name="menu_form_telp_hint_id">Masukkan No. HP / Telepon</string>
    <string name="menu_form_deskripsi_id">Deskripsi Usaha:</string>
    <string name="menu_form_deskripsi_hint_id">Masukkan Deskripsi Usaha Anda</string>
    <string name="menu_form_barang_id">Jenis Barang Yang Dijual:</string>
    <string name="menu_form_barang_hint_id">Kulkas,AC,TV,Mesin Cuci</string>
    <string name="menu_form_barang_hint_2_id">Jeans, Kemeja, Kaos, Jaket</string>
    <string name="button_1_id">Selanjutnya</string>
    <string name="button_2_id">Simpan</string>
    <string name="kuliner_1_id">Nama: </string>
    <string name="tentang_1_id">GoKWH merupakan sebuah inovasi untuk membantu para pemula yang ingin memulai suatu usaha, GoKWH memberikan anda akses untuk membuat sebuah proposal berupa dokumen. Bergabung dengan kami untuk memulai bisnis anda.</string>
    <string name="tentang_web_id">Kunjungi Kami di :</string>
    <string name="link_id">Go KWH Website</string>
    <string name="title_activity_welcome">Beranda</string>
    <string name="next">Selanjutnya</string>
    <string name="skip">Lewati</string>
    <string name="start">Mulai</string>
    <string name="slide_1_title">Kuliner</string>
    <string name="slide_1_desc">Mulai Usaha Anda Dengan Berwirausaha</string>
    <string name="slide_2_title">Elektronik </string>
    <string name="slide_2_desc">Kami Membantu Anda Dengan Menyediakan Beberapa Proposal</string>
    <string name="slide_3_title">Fashion</string>
    <string name="slide_3_desc">Go KWH Mari Berwirausaha</string>
    <string name="anggota_id">ID : </string>
    <string name="anggota_nama">Nama : </string>
    <string name="anggota_jabatan">Jabatan : </string>
    <string name="anggota_email">E-Mail : </string>
</resources>
