<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="6dp"
        card_view:cardElevation="3dp"
        card_view:cardUseCompatPadding="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="27dp"
                    android:layout_gravity="center"
                    android:text="@string/menu_form_1_id"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/menu_form_nama_id"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/input_nama"
                    android:layout_width="402dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/menu_form_nama_hint_id"
                    android:inputType="text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/menu_form_alamat_id"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/input_alamat"
                    android:layout_width="402dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/menu_form_alamat_hint_id"
                    android:inputType="text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/menu_form_email_id"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="402dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/menu_form_alamat_hint_id"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/menu_form_telp_id"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/input_hp"
                    android:layout_width="402dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/menu_form_telp_hint_id"
                    android:inputType="number" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_form_deskripsi_id"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/input_des"
                    android:layout_width="402dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/menu_form_deskripsi_hint_id"
                    android:inputType="textLongMessage" />

                <Button
                    android:id="@+id/simpan"
                    android:layout_width="wrap_content"
                    android:layout_height="43dp"
                    android:layout_gravity="center"
                    android:text="@string/button_2_id"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:theme="@style/Button2Style"
                    android:clickable="true"
                    android:textColor="#FFFFFF"
                    android:focusable="true" />
            </LinearLayout>
        </ScrollView>
    </android.support.v7.widget.CardView>
</RelativeLayout>