<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="259dp"
        android:layout_height="230dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:contentDescription="@string/menu_logo_id"
        android:src="@drawable/go_kwh" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:text="@string/menu_3_id"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="101dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView3"
        android:text="@string/tentang_1_id"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="88dp"
        android:text="@string/tentang_web_id"
        android:textAlignment="textStart"
        android:textColor="#000000" />

    <Button
        android:id="@+id/website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:onClick="website"
        android:text="@string/link_id"
        android:textColor="#FFFFFF"
        android:theme="@style/Button2Style" />

</RelativeLayout>