<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:text="@string/menu_1_id"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:text="@string/menu_2_id"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:layout_width="266dp"
        android:layout_height="260dp"
        android:layout_centerInParent="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/menu_logo_id"
        android:src="@drawable/go_kwh" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:text="@string/menu_3_id"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>