<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_4_id"
        android:textAlignment="center"
        android:gravity="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <ImageView
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="107dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/menu_logo2_id"
        android:src="@drawable/logo_kuliner" />

    <Button
        android:id="@+id/btn_next"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="46dp"
        android:onClick="Selanjutnya"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/button_1_id"
        android:textColor="#FFFFFF"
        android:theme="@style/Button2Style"/>

</RelativeLayout>