<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="6dp"
        card_view:cardElevation="3dp"
        card_view:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewID1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anggota_id"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/textViewID1"
                android:text=""
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewNama1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textViewID"
                android:text="@string/anggota_nama"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewNama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewID1"
                android:layout_toRightOf="@id/textViewNama1"
                android:text=""
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewJabatan1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewNama"
                android:text="@string/anggota_jabatan"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewJabatan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewNama1"
                android:layout_toRightOf="@id/textViewJabatan1"
                android:text=""
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewEmail1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewJabatan"
                android:text="@string/anggota_email"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewJabatan1"
                android:layout_toRightOf="@id/textViewEmail1"
                android:text=""
                android:textColor="#000000"
                android:textSize="20sp" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>